--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-
+  <h1>Covid Evolution</h1>
+  <h2>New Cases: <span id="date"></span></h2>
+  <div id="chart"></div>
+  <button id="play">Play</button>
+  <a href="https://github.com/owid/covid-19-data/tree/master/public/data" target="_blank">Fonte dos dados(OWID)</a>
 </body>
 </html>
