add 7 days moving average

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <option value="new_cases">New Cases</option>
       <option value="new_deaths">New Deaths</option>
       <option value="total_deaths">Total Deaths</option>
+      <option value="7DMA">7 Days Moving Average (Cases)</option>
     </select>
     <ul id="toplist">
     </ul>
