--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/d3-geo-projection@4.0.0/dist/d3-geo-projection.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/d3-simple-slider@1.10.4/dist/d3-simple-slider.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.13.0/d3-legend.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   <script src="./index.js"></script>
   <link rel="stylesheet" href="./style.css"/>
 </head>
@@ -36,5 +39,14 @@
   </div>
   <p id="steps">Steps: 1 days</p>
   <a href="https://github.com/owid/covid-19-data/tree/master/public/data" target="_blank">Fonte dos dados(OWID)</a>
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2 id="modal-title"></h2>
+      <span id="chart-holder">
+        <canvas id="modal-chart"></canvas>
+      </span>
+    </div>
+  </div>  
 </body>
 </html>
